--- a/src/index.css
+++ b/src/index.css
@@ -272,6 +272,9 @@ details[open] summary::after{
 .profile-footer{
   font-size: .85rem;
 }
+.personalinfo-header{
+  z-index: 1;
+}
 @media (max-width: 700px) {
   .search-desc-item{
   font-size: .7rem;
