--- a/src/index.css
+++ b/src/index.css
@@ -272,8 +272,13 @@ details[open] summary::after{
 .profile-footer{
   font-size: .85rem;
 }
-.personalinfo-header{
+.personalinfo-header, .account-header{
   z-index: 1;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.200);
+}
+.login-btn{
+  background: linear-gradient(to left,#008080, #00c0c0);
+
 }
 @media (max-width: 700px) {
   .search-desc-item{
