--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@
 
 .navbar {
   box-shadow: 0 -1px 12px rgba(0, 0, 0, 0.644);
-  height: 60px;
+  height: 55px;
   z-index: 1;
 }
 
@@ -279,11 +279,19 @@ details[open] summary::after{
 .login-btn{
   background: linear-gradient(to left,#008080, #00c0c0);
 }
- .bottom-border{
+.save-btn{
+  background-color: #008080;
+}
+.bottom-border{
   border: 0;
  border-bottom: 1px solid darkgray;
   }
-
+.translate-switch{
+  margin-top: 2.2rem;
+}
+.font-smaller{
+  font-size: .9rem;
+}
 @media (max-width: 700px) {
   .search-desc-item{
   font-size: .7rem;
