--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,7 @@
 .social-logo {
   left: 5px;
 }
+
 .search-button-img {
   height: 20px;
   width: 20px;
@@ -79,9 +80,11 @@
   background-color: transparent;
   z-index: 1;
 }
-.search-filter-btn{
+
+.search-filter-btn {
   border: 1px solid rgba(0, 0, 0, 0.349);
 }
+
 .search-button-mgnf-glass {
   top: 18px;
   left: 23px;
@@ -94,95 +97,121 @@
 .search-lbl {
   position: absolute;
   display: none;
-  left:56px;
+  left: 56px;
   top: 15px;
   font-size: .94rem;
   font-weight: 500;
 }
-.search-desc-container{
+
+.search-desc-container {
   flex-wrap: nowrap;
   top: 34px;
   left: 3.5rem;
   width: 46.5%;
 }
-.search-desc-item{
+
+.search-desc-item {
   height: 2rem;
   height: 20px;
   overflow: hidden;
 }
-.desc-item-divisor{
-  margin-bottom:10px;
+
+.desc-item-divisor {
+  margin-bottom: 10px;
   font-weight: bold;
   font-size: 1.2rem;
   transform: translateY(-11px);
 }
-.types-container{
+
+.types-container {
   height: 61px;
 }
-.types-carrousel{
+
+.types-carrousel {
   min-width: 100vw;
   overflow-x: auto;
 }
-.types-carrousel::-webkit-scrollbar{
+
+.types-carrousel::-webkit-scrollbar {
   width: 0;
 }
-.types-item-img{
+
+.types-item-img {
   height: 25px;
   width: 25px;
 }
-.types-item{
+
+.types-item {
   font-size: .7rem;
   border: 0;
   background-color: transparent;
   white-space: nowrap;
 }
-.types-item:hover{
+
+.types-item:hover {
   border-bottom: 1px solid darkgray;
 }
-.types-item:hover{
+
+.types-item:hover {
   border-bottom: 1px solid darkgray;
 }
-.types-item:focus{
+
+.types-item:focus {
   border-bottom: 1px solid blue;
 }
-.acmd-filter-container,.destiny-container{
+
+.acmd-filter-container,
+.destiny-container {
   height: 100vh;
   z-index: 2;
   background-color: rgba(0, 0, 0, 0.550);
 }
-.destiny-container{
+
+.destiny-container {
   background-color: #ddd;
 }
-.find-destiny, .data-guest-btn{
+
+.find-destiny,
+.data-guest-btn {
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.200);
 }
-.filter-main{
+
+.filter-main {
   min-height: 100%;
 }
-.acmd-filter{
+
+.acmd-filter {
   overflow-y: scroll;
 }
-.acmd-header, .destiny-header{
+
+.acmd-header,
+.destiny-header {
   z-index: 1;
 }
-.close-btn{
+
+.close-btn {
   font-size: 25px;
 }
-.filter-header{
+
+.filter-header {
   width: 100%;
 }
-.price-lbl{
+
+.price-lbl {
   font-size: .75rem;
   left: 10px;
   top: 5px;
 }
+
 .price-input {
   height: 50px;
 }
-.acmd-price-table{
+
+.acmd-price-table {
   border-bottom: 2px solid #a9a9a9;
 }
-.acmd-price-item{
+
+.acmd-price-item {
   height: 20px;
   width: 10px;
   background-color: #a9a9a9;
@@ -190,65 +219,88 @@
   margin-right: 0.5px;
   border-radius: 1.5px 1.5px 0px 0px;
 }
-.comodos-carroussel{
+
+.comodos-carroussel {
   overflow-x: scroll;
   white-space: nowrap;
-} 
-.comodos-carroussel::-webkit-scrollbar{
+}
+
+.comodos-carroussel::-webkit-scrollbar {
   width: 0;
 }
-.comodos-btn{
+
+.comodos-btn {
   background-color: transparent;
   padding: 5px;
   border: 0;
 }
-.selected{
+
+.selected {
   background-color: #000;
   color: #fff;
 }
-.property{
+
+.property {
   height: 93px;
-  width:100px;
+  width: 100px;
   margin: 5px;
   background-color: #fff;
 }
-.property-item{
+
+.property-item {
   margin-top: 1px;
   height: 50px;
   width: 50px;
 }
-.destiny-btn, .offers-btn, .account-btn{
+
+.destiny-btn,
+.offers-btn,
+.account-btn {
   border: 0;
   border-bottom: 2px solid transparent;
 }
-.border-bt{
+
+.border-bt {
   border-bottom: 2px solid black;
 }
-.lupa{
+
+.lupa {
   height: 16px;
 }
-.destiny-text{
+
+.destiny-text {
   white-space: nowrap;
 }
-.destiny-maps{
+
+.destiny-maps {
   overflow-x: scroll;
 }
-.destiny-map-img{
+
+.destiny-map-img {
   height: 5.5rem;
 }
-.phone-input::placeholder{
+
+.phone-input::placeholder {
   font-size: 1.2rem;
 }
-.code-input{
+
+.code-input {
   letter-spacing: 5px;
 }
-.name-desc,.email-desc,.info-desc,.terms-desc,.notifi-desc{
+
+.name-desc,
+.email-desc,
+.info-desc,
+.terms-desc,
+.notifi-desc {
   font-size: .9rem;
 }
-summary::-webkit-details-marker{
+
+summary::-webkit-details-marker {
   display: none;
 }
-summary::after{
+
+summary::after {
   background-color: #000;
   content: "?";
   color: #fff;
@@ -261,45 +313,65 @@ summary::after{
   left: 20px;
   margin-right: 10px;
 }
-details[open] summary::after{
+
+details[open] summary::after {
   content: "-";
 }
-.profile-img{
+
+.profile-img {
   height: 60px;
   width: 60px;
   background-color: rgb(50, 50, 50);
 }
-.profile-footer{
+
+.profile-footer {
   font-size: .85rem;
 }
-.personalinfo-header, .account-header{
+
+.personalinfo-header,
+.account-header {
   z-index: 1;
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.200);
 }
-.login-btn{
-  background: linear-gradient(to left,#008080, #00c0c0);
+
+.login-btn {
+  background: linear-gradient(to left, #008080, #00c0c0);
 }
-.save-btn{
+
+.save-btn {
   background-color: #008080;
 }
-.bottom-border{
+
+.bottom-border {
   border: 0;
- border-bottom: 1px solid darkgray;
-  }
-.translate-switch{
+  border-bottom: 1px solid darkgray;
+}
+
+.translate-switch {
   margin-top: 2.2rem;
 }
-.font-smaller{
+
+.font-smaller {
   font-size: .9rem;
 }
+.receipt-elem{
+  background-color:rgba(0, 0, 0, 0.050);
+}
+.receipt-value{
+  font-size: 18px;
+  padding: 0;
+  margin: 0;
+}
 @media (max-width: 700px) {
-  .search-desc-item{
-  font-size: .7rem;
+  .search-desc-item {
+    font-size: .7rem;
   }
-  .search-lbl{
+
+  .search-lbl {
     display: block;
   }
-  .destiny-maps::-webkit-scrollbar{
+
+  .destiny-maps::-webkit-scrollbar {
     height: 0;
   }
 }
