--- a/src/index.css
+++ b/src/index.css
@@ -376,6 +376,23 @@ details[open] summary::after {
   background-color: rgba(0, 0, 0, 0.150);
 
 }
+.addAcomodation{
+  background: linear-gradient(to right, rgb(108, 0, 196), rgb(168, 0, 173), rgb(224, 0, 86),  rgb(255, 0, 55));
+}
+.close-addAcmd-btn{
+  background-color: rgba(255, 255, 255, 0.336);
+}
+.addAcomodation-main{
+  min-height: 300px;
+  background-color: #fff;
+}
+.space-types{
+  border: 1px solid darkgray;
+  text-align: start;
+}
+.space-types:focus{
+  border: 1px solid #000;
+}
 @media (max-width: 700px) {
   .search-desc-item {
     font-size: .7rem;
