--- a/src/index.css
+++ b/src/index.css
@@ -393,6 +393,11 @@ details[open] summary::after {
 .space-types:focus{
   border: 1px solid #000;
 }
+.map{
+  height: 200px;
+  width: 100%;
+  margin-top: 50px;
+}
 @media (max-width: 700px) {
   .search-desc-item {
     font-size: .7rem;
