--- a/src/index.css
+++ b/src/index.css
@@ -398,6 +398,18 @@ details[open] summary::after {
   width: 100%;
   margin-top: 50px;
 }
+.conv-items, .pref-items, .sec-items,.selected{
+  width: 120px;
+  height: 100px;
+  background-color: transparent;
+  border: 1px solid rgb(169, 169, 169);
+  font-weight: 500;
+  border-radius: 12px;
+}
+.selected{
+  border: 1px solid #000;
+  color: #000;
+}
 @media (max-width: 700px) {
   .search-desc-item {
     font-size: .7rem;
