acomodation types style improved

--- a/src/index.css
+++ b/src/index.css
@@ -139,7 +139,7 @@
 
 .types-container {
   height: 61px;
-  box-shadow: 0 5px 8px 5px #a9a9a977;
+  box-shadow: 0 6px 8px darkgray;
 }
 
 .types-carrousel {
