--- a/src/index.css
+++ b/src/index.css
@@ -139,7 +139,7 @@
 
 .types-container {
   height: 61px;
-  box-shadow: 0 6px 8px darkgray;
+  box-shadow: 0 5px 4px rgba(169, 169, 169, 0.185);
 }
 
 .types-carrousel {
@@ -252,6 +252,10 @@
 .conv-selected {
   background-color: #000;
   color: #fff;
+}
+
+.teste{
+  background-color: #000;
 }
 
 .property {
@@ -455,7 +459,7 @@ details[open] summary::after {
   margin: 0 auto;
 }
 
-a.comodation-desc {
+.acomodation-desc {
   resize: none;
 }
 
