--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
 }
 
+.home-header{
+  z-index: 1;
+  background:#fff;
+}
+
 .navbar-navigator-selected {
   color: #f00;
 }
