--- a/src/index.css
+++ b/src/index.css
@@ -182,7 +182,8 @@
 
 .acmd-filter-container,
 .destiny-container {
-  height: 100vh;
+  max-height: 100vh;
+  min-height: 100vh;
   z-index: 2;
   background-color: rgba(0, 0, 0, 0.550);
 }
